--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<header>
-        <ul>
+		<ul>
 			<li><img src="images/foto-kansje.jpg"
 					alt="een heer van de vinken die een kansje onder de korf neemt tijdens een korfbalwedstrijd"></li>
 			<li><img src="images/foto_vrijebal.jpg"
@@ -23,33 +23,33 @@
 					alt="breede foto van alle korfbalvelden van de vinken waar getraint wordt"></li>
 			<li><img src="images/foto_jeugdteam.jpg" alt="een jeugdteam van de vinken die een wedstrijd speelt"></li>
 		</ul>
-        <section>
-            
-            <!-- het logo -->
-            <a href="#">
-                <img src="images/logo_de_vinken.png" alt="Logo korfbalvereniging de Vinken" /></a>
+		<section>
 
-            <!-- het menu -->
-            <nav>
-                <!-- de button is niet relevant voor screenreaders -->
-                <!-- met aria-hidden="true" 'verstop' je de button voor ze -->
-                <button aria-hidden="true">Menu</button>
+			<!-- het logo -->
+			<a href="#">
+				<img src="images/logo_de_vinken.png" alt="Logo korfbalvereniging de Vinken" /></a>
 
-                <ul>
-                    <li><a class="active">Nieuws</a></li>
-                    <li><a href="#">Vereniging</a></li>
-                    <li><a href="#">Senioren</a></li>
-                    <li><a href="#">Jeugd</a></li>
-                    <li><a href="#">Wedstrijden</a></li>
-                    <li><a href="#">Agenda</a></li>
-                    <li><a href="#">Sponsering</a></li>
-                    <li><a href="#">Beachveld</a></li>
-                    <li><a href="#">Search</a></li>
-                </ul>
-            </nav>
+			<!-- het menu -->
+			<nav>
+				<!-- de button is niet relevant voor screenreaders -->
+				<!-- met aria-hidden="true" 'verstop' je de button voor ze -->
+				<button aria-hidden="true">Menu</button>
 
-        </section>
-    </header>
+				<ul>
+					<li><a class="active">Nieuws</a></li>
+					<li><a href="#">Vereniging</a></li>
+					<li><a href="#">Senioren</a></li>
+					<li><a href="#">Jeugd</a></li>
+					<li><a href="#">Wedstrijden</a></li>
+					<li><a href="#">Agenda</a></li>
+					<li><a href="#">Sponsering</a></li>
+					<li><a href="#">Beachveld</a></li>
+					<li><a href="#">Search</a></li>
+				</ul>
+			</nav>
+
+		</section>
+	</header>
 	<main>
 		<ul>
 			<li>
@@ -111,9 +111,11 @@
 					</a>
 				</li>
 			</ul>
-			<p>1 van de 18 pagina's</p>
-			<button>></button>
-			<button>>></button>
+			<section>
+				<p>1 van de 18 pagina's</p>
+				<button>></button>
+				<button>>></button>
+			</section>
 		</section>
 		<section>
 			<h1> Wedstrijdverslagen</h1>
@@ -143,13 +145,15 @@
 				</li>
 
 			</ul>
-			<p>1 van de 18 pagina's</p>
-			<button>></button>
-			<button>>></button>
+			<section>
+				<p>1 van de 18 pagina's</p>
+				<button>></button>
+				<button>>></button>
+			</section>
 		</section>
 		<section>
 			<a href="#">
-				<p>Klik hier: Coronamaatregelen spelers en bezoekers</p>
+				<h1>Klik hier: Coronamaatregelen spelers en bezoekers</h1>
 				<img src="images/coronavirus.jpg" alt="coronavirusdeeltjes in de kleur blauw">
 				<!--Bron afbeelding: https://fysioflexx.nl/informatie-maatregelen-omtrendt-coronavirus/  -->
 			</a>
@@ -158,35 +162,25 @@
 			<ul>
 				<li>
 					<h1>Hoofdsponsoren</h1>
-					<ul>
-						<li><a href=""><img src="" alt=""></a></li>
-						<li><a href=""><img src="" alt=""></a></li>
-						<li><a href=""><img src="" alt=""></a></li>
-					</ul>
+					<a href="#"><img src="images/sponsor_debron.jpg" alt=""></a>
 				</li>
 				<li>
 					<h1>Shirtsponsoren</h1>
-					<ul>
-						<li><a href=""><img src="" alt=""></a></li>
-						<li><a href=""><img src="" alt=""></a></li>
-						<li><a href=""><img src="" alt=""></a></li>
-					</ul>
+					<a href="#"><img src="images/sponsor_jumbo.jpg" alt=""></a>
 				</li>
 				<li>
 					<h1>Sponsoren</h1>
-					<ul>
-						<li><a href=""><img src="" alt=""></a></li>
-						<li><a href=""><img src="" alt=""></a></li>
-						<li><a href=""><img src="" alt=""></a></li>
-					</ul>
+					<a href="#"><img src="images/sponsor_desuite.jpg" alt=""></a>
 				</li>
 				<li>
 					<h1>Sponsorkliks</h1>
-				<li><a href=""><img src="" alt=""></a></li>
+					<a href=""><img src="images/sponsor_sponsorkliks.png" alt=""></a>
 				</li>
 			</ul>
 		</section>
-		<a href="#">Ook lid worden? Klik hier!</a>
+		<a href="#">
+			<h1>Ook lid worden? Klik hier!</h1>
+		</a>
 		<section>
 			<h1></h1>
 			<p></p>
@@ -208,39 +202,39 @@
 				<li>
 					<h1>Peutertraining</h1>
 					<p>Deze activiteit duurt van 10:00 tot 10:45</p>
-					<p>sep 17</p>
+					<p>sep</p>
+					<p>17</p>
 
 				</li>
 				<li>
 					<h1>Uidelen boekjes grote club actie</h1>
 					<p>-</p>
-					<p>sep 19</p>
+					<p>sep</p>
+					<p>19</p>
 				</li>
 				<li>
 					<h1>Schoonmaken Vinkenfit</h1>
 					<p>Deze activiteit duurt van 19:00 tot 20:30</p>
-					<p>sep 22</p>
+					<p>sep</p>
+					<p>22</p>
 				</li>
 				<li>
 					<h1>Aspirantenavond</h1>
 					<p>Deze activiteit duurt van 10:00 tot 10:45</p>
-					<p>sep 23</p>
+					<p>sep</p>
+					<p>23</p>
 				</li>
 				<li>
-					<a href="#">
-						<h1>Start Grote Clubactie</h1>
-						<p>Deze activiteit duurt van 10:00 tot 10:45</p>
-						<p>sep 24</p>
-
-					</a>
+					<h1>Start Grote Clubactie</h1>
+					<p>Deze activiteit duurt van 10:00 tot 10:45</p>
+					<p>sep</p>
+					<p>24</p>
 				</li>
 				<li>
-					<a href="#">
-						<h1>Schoolkorfbal groep 4 t/m 8</h1>
-						<p>Deze activiteit duurt van 10:00 tot 10:45</p>
-						<p>sep 28</p>
-
-					</a>
+					<h1>Schoolkorfbal groep 4 t/m 8</h1>
+					<p>Deze activiteit duurt van 10:00 tot 10:45</p>
+					<p>sep</p>
+					<p>28</p>
 				</li>
 			</ul>
 
@@ -248,28 +242,34 @@
 		<section>
 			<h1>Verjaardagen</h1>
 			<ul>
-				<li>Verjaardag</li>
-				<li>16 sep</li>
-				<li>20 sep</li>
-				<li>22 sep</li>
-				<li>25 sep</li>
-				<li>25 sep</li>
-				<li>26 sep</li>
-				<li>29 sep</li>
-				<li>30 sep</li>
-				<li>30 sep</li>
-			</ul>
-			<ul>
-				<li>Gefeliciteerd</li>
-				<li>Kenny Kroon</li>
-				<li>Mient Kammingga</li>
-				<li>Sven van Leeuwen</li>
-				<li>Maud Verlaan</li>
-				<li>Carice Drost</li>
-				<li>Dirk van der Vliet</li>
-				<li>Gert Langelaar</li>
-				<li>Bente Claassen</li>
-				<li>Ditte Claassen</li>
+				<li>
+					<ul>
+						<li>Verjaardag</li>
+						<li>16 sep</li>
+						<li>20 sep</li>
+						<li>22 sep</li>
+						<li>25 sep</li>
+						<li>25 sep</li>
+						<li>26 sep</li>
+						<li>29 sep</li>
+						<li>30 sep</li>
+						<li>30 sep</li>
+					</ul>
+				</li>
+				<li>
+					<ul>
+						<li>Gefeliciteerd</li>
+						<li>Kenny Kroon</li>
+						<li>Mient Kammingga</li>
+						<li>Sven van Leeuwen</li>
+						<li>Maud Verlaan</li>
+						<li>Carice Drost</li>
+						<li>Dirk van der Vliet</li>
+						<li>Gert Langelaar</li>
+						<li>Bente Claassen</li>
+						<li>Ditte Claassen</li>
+					</ul>
+				</li>
 			</ul>
 		</section>
 		<section>
@@ -298,9 +298,11 @@
 					</a>
 				</li>
 			</ul>
-			<p>1 van 76 pagina's</p>
-			<button>></button>
-			<button>>></button>
+			<section>
+				<p>1 van 76 pagina's</p>
+				<button>></button>
+				<button>>></button>
+			</section>
 		</section>
 		<section>
 			<h1>Onze sponsoren</h1>
