--- a/index.html
+++ b/index.html
@@ -14,15 +14,32 @@
 
 <body>
 	<header>
-		<ul>
-			<li><img src="images/foto-kansje.jpg"
-					alt="een heer van de vinken die een kansje onder de korf neemt tijdens een korfbalwedstrijd"></li>
-			<li><img src="images/foto_vrijebal.jpg"
-					alt="een dame en een heer van de vinken die een vrijebal nemen tijdens een korfbalwedstrijd"></li>
-			<li><img src="images/foto_korfbalvelden.jpg"
-					alt="breede foto van alle korfbalvelden van de vinken waar getraint wordt"></li>
-			<li><img src="images/foto_jeugdteam.jpg" alt="een jeugdteam van de vinken die een wedstrijd speelt"></li>
-		</ul>
+		<section>
+			<!-- Bron:Codepen Sanne 't Hoofd carousel met buttons. https://codepen.io/shooft/pen/poVWpQQ -->
+			<button>
+				<div></div>
+			</button>
+			<ul>
+				<li><img src="images/foto-kansje.jpg"
+						alt="een heer van de vinken die een kansje onder de korf neemt tijdens een korfbalwedstrijd">
+				</li>
+				<li><img src="images/foto_vrijebal.jpg"
+						alt="een dame en een heer van de vinken die een vrijebal nemen tijdens een korfbalwedstrijd">
+				</li>
+				<li><img src="images/foto_korfbalvelden.jpg"
+						alt="breede foto van alle korfbalvelden van de vinken waar getraint wordt"></li>
+				<li><img src="images/foto_jeugdteam.jpg" alt="een jeugdteam van de vinken die een wedstrijd speelt">
+				</li>
+			</ul>
+			<button>
+				<div></div>
+			</button>
+			<button></button>
+			<button></button>
+			<button></button>
+			<button></button>
+
+		</section>
 		<section>
 
 			<!-- het logo -->
@@ -36,9 +53,9 @@
 				<button aria-hidden="true">Menu</button>
 
 				<ul>
-					<li>Nieuws</li>
-					<li>Vereniging
-						<!-- <ul>
+					<li><a>Nieuws</a></li>
+					<li><a>Vereniging
+							<!-- <ul>
 							<li><a href="">60 jarig jubileum</a></li>
 							<li><a href="">De Vinken</a></li>
 							<li><a href="">Sport voor jong en oud</a></li>
@@ -49,8 +66,9 @@
 							<li><a href="">Webshop - Vinkenkleding</a></li>
 							<li><a href="">Leden login</a></li>
 						</ul> -->
+						</a>
 					</li>
-					<li>Senioren
+					<li><a>Senioren</a>
 						<!-- <ul>
 							<li><a>De Vinken 1 - Kindermodehuis</a></li>
 							<li><a href="">De Vinken 2 - De Vink</a></li>
@@ -59,7 +77,7 @@
 							<li><a href="">Trainingstijden senioren</a></li>
 						</ul> -->
 					</li>
-					<li>Jeugd
+					<li><a>Jeugd</a>
 						<!-- <ul>
 							<li><a href="">De Vinken A1 - Brouwer Transport</a></li>
 							<li><a href="">De Vinken B1 - De Bron</a></li>
@@ -76,14 +94,14 @@
 
 					<li><a href="#">Wedstrijden</a></li>
 					<li><a href="#">Agenda</a></li>
-					<li>Sponsering
+					<li><a>Sponsering</a>
 						<!-- <ul>
 							<li><a href="#"></a></li>
 							<li><a href="#"></a></li>
 							<li><a href="#"></a></li>
 						</ul> -->
 					</li>
-					<li>Beachveld
+					<li><a>Beachveld</a>
 						<!-- <ul>
 							<li><a href="#">Informatie en agenda </a></li>
 							<li><a href="#">Spelregels beachkorfbal</a></li>
@@ -116,8 +134,9 @@
 				</a>
 			</li>
 		</ul>
-		<section><!--1-->
-			
+		<section>
+			<!--1-->
+
 			<h2> Nieuwsberichten</h2>
 			<ul>
 				<li>
@@ -163,7 +182,8 @@
 				<button>>></button>
 			</section>
 		</section>
-		<section><!--2-->
+		<section>
+			<!--2-->
 			<h2> Wedstrijdverslagen</h2>
 			<ul>
 				<li>
