--- a/navigatie.html
+++ b/navigatie.html
@@ -1,38 +1,72 @@
-<!doctype html>
-<html lang="nl">
+<section>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="author" content="Julia">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- het logo -->
+	<a href="#">
+		<img src="images/logo_de_vinken.png" alt="Logo korfbalvereniging de Vinken" /></a>
 
-	<title>Home | Korfbalvereniging De Vinken</title>
+	<!-- het menu -->
+	<nav>
+		<!-- de button is niet relevant voor screenreaders -->
+		<!-- met aria-hidden="true" 'verstop' je de button voor ze -->
+		<button aria-hidden="true">Menu</button>
 
-	<link href="styles/style_nav.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
-</head>
-<body>
-	<header>
-		<!--Navigatie-->
-		<section>
-			<!--het logo-->
-			<a href="#">
-				<img src="images/logo_de_vinken.png" alt="logo van Korfbalvereniging de Vinken">
-			</a>
-			<!--het menu-->
-			<nav>
-				<button aria-hidden="true"></button>
-				<ul>
-					<li><a href="#">Nieuws</a></li>
-					<li><a href="#">Vereniging</a></li>
-					<li><a href="#">Senioren</a></li>
-					<li><a href="#">Jeugd</a></li>
-					<li><a href="#">Wedstrijden</a></li>
-					<li><a href="#">Agenda</a></li>
-					<li><a href="#">Sponsering</a></li>
-					<li><a href="#">Beachveld</a></li>
-					<li><a href="#">Search</a></li>
-				</ul>
-			</nav>
-		</section>
-	</header>
+		<ul>
+			<li><a>Nieuws</a></li>
+			<li><a>Vereniging
+					<!-- <ul>
+					<li><a href="">60 jarig jubileum</a></li>
+					<li><a href="">De Vinken</a></li>
+					<li><a href="">Sport voor jong en oud</a></li>
+					<li><a href="">Nieuwsbrief, magazine en media</a></li>
+					<li><a href="">Contributie en lid worden</a></li>
+					<li><a href="">Organisatie en contact</a></li>
+					<li><a href="">Vereniginginformatie</a></li>
+					<li><a href="">Webshop - Vinkenkleding</a></li>
+					<li><a href="">Leden login</a></li>
+				</ul> -->
+				</a>
+			</li>
+			<li><a>Senioren</a>
+				<!-- <ul>
+					<li><a>De Vinken 1 - Kindermodehuis</a></li>
+					<li><a href="">De Vinken 2 - De Vink</a></li>
+					<li><a href="">De Vinken 3 - Korfbaltotaal</a></li>
+					<li><a href=""></a>De Vinken MW1</li>
+					<li><a href="">Trainingstijden senioren</a></li>
+				</ul> -->
+			</li>
+			<li><a>Jeugd</a>
+				<!-- <ul>
+					<li><a href="">De Vinken A1 - Brouwer Transport</a></li>
+					<li><a href="">De Vinken B1 - De Bron</a></li>
+					<li><a href="">De Vinken C1 - Jumbo Vinkeveen</a></li>
+					<li><a href="">De Vinken D1 - Jumbo Vinkeveen</a></li>
+					<li><a href="">De Vinken D2 - Jumbo Vinkeveen</a></li>
+					<li><a href="">De Vinken D3 - Jumbo Vinkeveen</a></li>
+					<li><a href="">De Vinken E1 - Jumbo Vinkeveen</a></li>
+					<li><a href="">De Vinken E2 - Jumbo Vinkeveen</a></li>
+					<li><a href="">De Vinken F1 - Jumbo Vinkeveen</a></li>
+					<li><a href="">De Vinken F2 - Jumbo Vinkeveen</a></li>
+				</ul> -->
+			</li>
+
+			<li><a href="#">Wedstrijden</a></li>
+			<li><a href="#">Agenda</a></li>
+			<li><a>Sponsering</a>
+				<!-- <ul>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+					<li><a href="#"></a></li>
+				</ul> -->
+			</li>
+			<li><a>Beachveld</a>
+				<!-- <ul>
+					<li><a href="#">Informatie en agenda </a></li>
+					<li><a href="#">Spelregels beachkorfbal</a></li>
+				</ul> -->
+			</li>
+			<li><a href="#">Search</a></li>
+		</ul>
+	</nav>
+
+</section>
