--- a/senioren_deVinken3.html
+++ b/senioren_deVinken3.html
@@ -153,24 +153,24 @@
                 <li>
                     <ul>
                         <li>Wedstrijd</li>
-                        <li>De Vinken 3 -<span>tegen</span>KVS/Groeneveld Keukens 7</li>
-                        <li>Kios (N) 3-<span>tegen</span>De Vinken 3</li>
-                        <li>Madjoe 3-<span>tegen</span>De Vinken 3</li>
-                        <li>De Vinken 3-<span>tegen</span>De Meervogels 5</li>
-                        <li>De Vinken 3-<span>tegen</span>Reeuwijk 3</li>
-                        <li>Velocitas 5-<span>tegen</span>De Vinken 3</li>
+                        <li>De Vinken 3 -<span class="visually-hidden">tegen</span>KVS</li>
+                        <li>Kios (N) 3-<span class="visually-hidden">tegen</span>De Vinken 3</li>
+                        <li>Madjoe 3-<span class="visually-hidden">tegen</span>De Vinken 3</li>
+                        <li>De Vinken 3-<span class="visually-hidden">tegen</span>De Meervogels 5</li>
+                        <li>De Vinken 3-<span class="visually-hidden">tegen</span>Reeuwijk 3</li>
+                        <li>Velocitas 5-<span class="visually-hidden">tegen</span>De Vinken 3</li>
                     </ul>
                 </li>
                 <li>
                     <ul>
                         <!-- Loop  icoon toevoegen -->
                         <li>Details</li>
-                        <li><a><img src="" alt=""></a></li>
-                        <li><a><img src="" alt=""></a></li>
-                        <li><a><img src="" alt=""></a></li>
-                        <li><a><img src="" alt=""></a></li>
-                        <li><a><img src="" alt=""></a></li>
-                        <li><a><img src="" alt=""></a></li>
+                        <li><a><img src="#" alt=""></a></li>
+                        <li><a><img src="#" alt=""></a></li>
+                        <li><a><img src="#" alt=""></a></li>
+                        <li><a><img src="#" alt=""></a></li>
+                        <li><a><img src="#" alt=""></a></li>
+                        <li><a><img src="#" alt=""></a></li>
                     </ul>
                 </li>
             </ul>
@@ -197,7 +197,7 @@
                         <li>Team</li>
                         <li>Excelsior 6</li>
                         <li>Kios (N) 3</li>
-                        <li>KVS Groeneveld Keukens 7</li>
+                        <li>KVS Groeneveld</li>
                         <li>Madjoe 3</li>
                         <li>De Meervogels 5</li>
                         <li>Reeuwijk 3</li>
@@ -615,9 +615,9 @@
         </ul>
         <ul>
             <li>Volg ons ook op</li>
-            <li><a href=""><img src="" alt=""></a></li>
-            <li><a href=""><img src="" alt=""></a></li>
-            <li><a href=""><img src="" alt=""></a></li>
+            <li><a href="#"><img src="" alt=""></a></li>
+            <li><a href="#"><img src="" alt=""></a></li>
+            <li><a href="#"><img src="" alt=""></a></li>
         </ul>
         <p><a href="#">Sportlink services</a> | <a href="#">Login</a></p>
     </footer>
